2024-01-24T01:08:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7633978144 # 51
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-24
* notice: last 14d: unq all: 2 17
* notice: prev accum: outdated-unq outdated-all / unq all: 593 1018 / 604 1035
* notice: next accum: outdated-unq outdated-all / unq all: 593 1018 / 604 1036
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-10 2024-01-23]

2024-01-23T16:19:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7628689409 # 50
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-23
* notice: last 14d: unq all: 2 17
* notice: prev accum: outdated-unq outdated-all / unq all: 592 1016 / 604 1035
* notice: next accum: outdated-unq outdated-all / unq all: 593 1018 / 604 1035
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-09] / []

2024-01-23T08:19:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7622865950 # 49
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-23
* notice: last 14d: unq all: 2 18
* notice: prev accum: outdated-unq outdated-all / unq all: 592 1016 / 603 1034
* notice: next accum: outdated-unq outdated-all / unq all: 592 1016 / 604 1035
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-23]

2024-01-23T01:08:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7619558659 # 48