@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-24T01:08:08Z",
+  "timestamp" : "2024-01-24T08:19:03Z",
   "count_outdated" : 1018,
   "uniques_outdated" : 593,
-  "count" : 1036,
-  "uniques" : 604,
+  "count" : 1037,
+  "uniques" : 605,
   "clones" : [
     {
       "timestamp": "2024-01-10T00:00:00Z",
@@ -100,6 +100,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
