@@ -1,5 +1,5 @@
 {
-  "count": 17,
+  "count": 18,
   "uniques": 2,
   "clones": [
     {
@@ -55,6 +55,11 @@
     {
       "timestamp": "2024-01-23T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-24T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
