@@ -1,3 +1,12 @@
+2024-01-24T08:19:03Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7637349823 # 52
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-24
+* notice: last 14d: unq all: 2 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 593 1018 / 604 1036
+* notice: next accum: outdated-unq outdated-all / unq all: 593 1018 / 605 1037
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-24]
+
 2024-01-24T01:08:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7633978144 # 51
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-24
